[gd_scene load_steps=19 format=3 uid="uid://digexdi8uqm1k"]

[ext_resource type="Shader" uid="uid://dr8p7qswmtovl" path="res://shaders/non_instanced_pma.gdshader" id="1_cms58"]
[ext_resource type="Script" uid="uid://unr6io4aw2kx" path="res://scripts/profiling/env_and_lights_scene.gd" id="1_eu2mh"]
[ext_resource type="Texture2D" uid="uid://cvoom7qu4404c" path="res://assets/single_textures/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_diff_2k.jpg" id="2_eu2mh"]
[ext_resource type="Texture2D" uid="uid://brs1husbmdekd" path="res://assets/single_textures/green_metal_rust_2k.blend/textures/green_metal_rust_diff_2k.jpg" id="3_mg0jk"]
[ext_resource type="Texture2D" uid="uid://cse8uuw55uf3n" path="res://assets/single_textures/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_nor_gl_2k.png" id="4_sn7ye"]
[ext_resource type="Texture2D" uid="uid://c0wg2kmpentsv" path="res://assets/single_textures/green_metal_rust_2k.blend/textures/green_metal_rust_nor_gl_2k.png" id="5_756vv"]
[ext_resource type="Texture2D" uid="uid://bb75x6l3ec5wc" path="res://assets/single_textures/rusty_metal_sheet_2k.blend/textures/rusty_metal_sheet_rough_2k.png" id="6_m3oi6"]
[ext_resource type="Texture2D" uid="uid://t0xk1rw1uk3x" path="res://assets/single_textures/green_metal_rust_2k.blend/textures/green_metal_rust_rough_2k.jpg" id="7_xhmft"]
[ext_resource type="Theme" uid="uid://b8bdf4l66bp3o" path="res://assets/ui_theme.tres" id="8_rk6yx"]

[sub_resource type="SphereMesh" id="SphereMesh_cms58"]

[sub_resource type="Gradient" id="Gradient_ajgdh"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.6, 0.6, 0.6, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ux7xw"]
gradient = SubResource("Gradient_ajgdh")
width = 1

[sub_resource type="Gradient" id="Gradient_rv8km"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.4, 0.4, 0.4, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ytkqt"]
gradient = SubResource("Gradient_rv8km")
width = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ipo0o"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_cms58")
shader_parameter/seed = 0
shader_parameter/uv_scale = 1.0
shader_parameter/patch_scale = 2.0
shader_parameter/wear_scale = 2.0
shader_parameter/pit_scale = 8.0
shader_parameter/detail_scale = 100.0
shader_parameter/time_scale = 0.01
shader_parameter/uniform_corrosion_speed = 0.005
shader_parameter/exposure = 1.0
shader_parameter/voronoi_fbm_iterations = 5
shader_parameter/snoise_fbm_iterations = 4
shader_parameter/use_vertex_weight = false
shader_parameter/vertex_weight_scale = 1.0
shader_parameter/vertex_weight_channel = 0
shader_parameter/age = 42.55
shader_parameter/paint_stability = 0.5
shader_parameter/uv_and_heat = 0.5
shader_parameter/pollution = 0.5
shader_parameter/moisture = 0.5
shader_parameter/albedo_base = ExtResource("2_eu2mh")
shader_parameter/metallic_base = SubResource("GradientTexture1D_ux7xw")
shader_parameter/roughness_base = ExtResource("6_m3oi6")
shader_parameter/normal_base = ExtResource("4_sn7ye")
shader_parameter/use_paint_layer = true
shader_parameter/paint_edge_sharpness = 0.98
shader_parameter/paint_yellowing = Color(0.85, 0.85, 0.5, 1)
shader_parameter/paint_yellowing_intensity = 2.5
shader_parameter/albedo_paint = ExtResource("3_mg0jk")
shader_parameter/metallic_paint = SubResource("GradientTexture1D_ytkqt")
shader_parameter/roughness_paint = ExtResource("7_xhmft")
shader_parameter/normal_paint = ExtResource("5_756vv")
shader_parameter/grime_intensity = 4.0
shader_parameter/grime_falloff = 0.9
shader_parameter/grime_color = Color(0.5, 0.25, 0, 1)
shader_parameter/rust_growth_factor = 200.0
shader_parameter/rust_color_1 = Color(0.5, 0.35, 0, 1)
shader_parameter/rust_color_2 = Color(0.33, 0.22, 0, 1)
shader_parameter/rust_color_3 = Color(0.2, 0.01, 0.02, 1)
shader_parameter/rust_color_4 = Color(0.125, 0.035, 0.075, 1)
shader_parameter/rust_red_shift = 0.25
shader_parameter/rust_green_shift = 0.06

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_y3iip"]
sky_top_color = Color(0.55, 0.55, 0.55, 1)
energy_multiplier = 5.0

[sub_resource type="Sky" id="Sky_160ns"]
sky_material = SubResource("ProceduralSkyMaterial_y3iip")

[sub_resource type="Environment" id="Environment_jj5dm"]
background_mode = 1
background_color = Color(0.08, 0.08, 0.08, 1)
sky = SubResource("Sky_160ns")
ambient_light_source = 3
reflected_light_source = 2

[node name="EnvAndLights" type="Node3D"]
script = ExtResource("1_eu2mh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_cms58")
surface_material_override/0 = SubResource("ShaderMaterial_ipo0o")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.0025928)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jj5dm")

[node name="UI" type="Panel" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -109.0
offset_right = 292.0
grow_vertical = 0
theme = ExtResource("8_rk6yx")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 56.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Environment only adjusted via script or the godot editor"

[node name="Lightcount" type="SpinBox" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 8.0
prefix = "Random lights:"

[node name="Regenerate" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Regenerate lights"

[node name="Rotating" type="CheckButton" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Rotating"

[connection signal="value_changed" from="UI/MarginContainer/VBoxContainer/Lightcount" to="." method="set_random_light_count"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/Regenerate" to="." method="regenerate_lights"]
[connection signal="toggled" from="UI/MarginContainer/VBoxContainer/Rotating" to="." method="set_rotating"]
